--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,9 @@
-# AutoFix Python Engine - Developer Environment Configuration
-# 
-# ⚠️  FOR DEVELOPERS ONLY - NOT NEEDED BY END USERS
-#
-# End users: The CLI works without any setup or credentials!
-# Developers: Use this file to test with your own Firebase project
-#
-# Copy this file to .env and fill in your Firebase credentials for testing
+﻿# Environment Variables Template
+# Copy this file to .env and fill in your actual values
 
-# Firebase Project Configuration (for developer testing only)
-# Get these values from your Firebase Console > Project Settings > General
-FIREBASE_PROJECT_ID=your-test-project-id
+# Google Gemini API Key
+# Get yours at: https://aistudio.google.com/app/apikey
+GEMINI_API_KEY=your_gemini_api_key_here
 
-# Firebase Web API Key (for developer testing only)
-# Get this from Firebase Console > Project Settings > General > Web API Key
-FIREBASE_WEB_API_KEY=your-web-api-key
-
-# Application Identifier (for developer testing only)
-# Used to organize test metrics in Firestore under artifacts/{APP_ID}/metrics
-APP_ID=autofix-test-app
-
-# Note: The production CLI has built-in credentials and doesn't need this file
+# Firebase Credentials (Optional)
+# FIREBASE_CREDENTIALS_PATH=path/to/firebase-credentials.json
