fix: remove test file ignore rules and add test_new_handlers.py
- Removed 'test_*.py' and '*_test.py' from .gitignore
- Test files are source code and must be tracked
- Added exception for generated test reports
- Force-added tests/test_new_handlers.py (6 tests)
- Fixed overly broad '*.json' rule

Test files added:
 test_file_not_found_handler_can_handle
 test_file_not_found_handler_analyze
 test_value_error_handler_can_handle
 test_value_error_handler_analyze_int
 test_value_error_handler_analyze_float
 test_handlers_return_false

Excludes:
 integration_test_report.json (generated file)

Fixes: Code review issue found by Jules

--- a/.gitignore
+++ b/.gitignore
@@ -21,17 +21,20 @@ wheels/
 *.egg
 MANIFEST
 
+
 # Virtual Environment
 venv/
 ENV/
 env/
 .venv/
 
+
 # Environment Variables - CRITICAL!
 .env
 *.env
 .env.local
 .env.*.local
+
 
 # IDE
 .vscode/
@@ -40,31 +43,45 @@ env/
 *.swo
 *~
 
+
 # OS
 .DS_Store
 Thumbs.db
 
+
 # Testing
 .pytest_cache/
+*integration_test_report*
 .coverage
 htmlcov/
 .tox/
 
+
 # Firebase
 firebase-credentials.json
 *-firebase-credentials.json
-*.json
+# Note: Allow package.json, pyproject.toml, etc. - only block Firebase credentials
+firebase-key.json
+
 
 # Logs
 *.log
+
 
 # Temporary files
 *.tmp
 *.bak
 .pyproject.toml.bak
 
+
 # Distribution
 *.whl
-# Test files
-test_*.py
-*_test.py
+
+
+# ============================================
+# IMPORTANT: Test files should NOT be ignored!
+# Test files are source code and must be in Git.
+# ============================================
+# Removed these problematic rules:
+# test_*.py   ← This blocked ALL test files!
+# *_test.py   ← This too!
