--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-﻿pytest>=7.0.0
+pytest>=7.0.0
 pytest-cov>=4.0.0
 firebase-admin>=6.0.0
 black>=23.0.0
 flake8>=6.0.0
 isort>=5.0.0
+fastapi>=0.100.0
+uvicorn>=0.20.0
+python-dotenv>=1.0.0
