--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,4 @@ GEMINI_API_KEY=your_gemini_api_key_here
 
 # Firebase Credentials (Optional)
 # FIREBASE_CREDENTIALS_PATH=path/to/firebase-credentials.json
+FIREBASE_PROJECT_ID=your-firebase-project-id
