--- a/requirements.txt
+++ b/requirements.txt
@@ -32,3 +32,9 @@ pytest-asyncio>=0.21.0
 python-dotenv>=1.0.0
 
 RestrictedPython>=6.0
+
+# Code Quality Tools
+pylint>=3.0.0
+bandit>=1.7.0
+radon>=6.0.0
+flake8>=7.0.0
